# sedx

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PHASE5_SUMMARY.md  README.md  TEST_SUITE_SUMMARY.txt  justfile
.github/workflows/: ci.yml  publish.yml  release.yml
completions/: README.md  install.sh  sedx.bash  sedx.elvish  sedx.fish  sedx.ps1  sedx.zsh
contrib/arch/: PKGBUILD
contrib/homebrew/: sedx.rb
contrib/rpm/: sedx.spec
contrib/snap/: snapcraft.yaml
docs/: ARCHITECTURE.md  CLAUDE_SKILL.md  CONTRIBUTING.md  CYCLE_BASED_REFACTORING.md  EXAMPLES.md  IMPROVEMENTS.md  MIGRATION_GUIDE.md  PRODUCTION_ROADMAP.md  RELEASE_NOTES.md  ROADMAP.md  SPECIFICATION.md  USER_GUIDE.md  warning-format-standard.md
docs/archive/: PHASE4_FINAL_SUMMARY.md  PROJECT_AUDIT.md
man/: sedx.1
scripts/: generate_completions.sh  package.sh
src/: backup_manager.rs  bre_converter.rs  capability.rs  cli.rs  command.rs  config.rs  diff_formatter.rs  disk_space.rs  ere_converter.rs  error_helpers.rs  file_processor.rs  lib.rs  logger.rs  main.rs  parser.rs  regex_error.rs  sed_parser.rs
tests/: KNOWN_ISSUES.md  PHASE4_TEST_RESULTS.md  README.md  TEST_SUITE.md  benchmark.sh  comprehensive_tests.sh  flow_control_tests.sh  generate_large_files.sh  hold_space_tests.sh  logging_test.sh  memory_profile.sh  phase4_tests.sh  property_tests.proptest-regressions  property_tests.rs  regression_tests.sh  run_all_tests.sh  run_quick_tests.sh  streaming_tests.sh  stress_tests.sh
tests/fixtures/addressing/: last_line.inp  line_number.inp  negation.inp  pattern.good  range_line_number.inp  range_mixed.good  range_mixed.inp  range_pattern.good  stepping.inp
tests/fixtures/advanced/: chained_commands.good  chained_commands.inp  complex_ranges.inp  multi_file.good  nested_groups.good
tests/fixtures/basic/: append.good  change.good  insert.good  print.good  substitute.inp  substitute_case.good  substitute_global.good  substitute_numbered.inp
tests/fixtures/edge/: special_chars.good  unicode.good  unicode.inp  whitespace.good
tests/fixtures/holdspace/: complex.good  complex.inp  exchange.good  exchange.inp  get.good  get.inp  get_append.good  hold.good  hold_append.good
tests/fixtures/pipeline/: case_insensitive.good  case_insensitive.inp  delete_pattern.good  global_substitute.good  global_substitute.inp  group_commands.good  multiple_commands.good  multiple_commands.inp  simple_substitute.good
tests/fixtures/regex/: backref_bre.good  backref_bre.inp  backref_ere.good  backref_ere.inp  backref_pcre.good  bre_basic.good  bre_basic.inp  bre_groups.good  bre_groups.inp  ere_basic.good  ere_basic.inp  ere_groups.good  ere_groups.inp  pcre_alternation.inp  pcre_anchors.inp  pcre_classes.inp  pcre_groups.good  pcre_quantifiers.good  pcre_quantifiers.inp
tests/fixtures/streaming/: delete_stream.good  large_file.good  long_lines.good  pattern_range_stream.inp  substitute_stream.inp
tests/scripts/: addressing_tests.sh  basic_tests.sh  edge_tests.sh  holdspace_tests.sh  phase5_tests.sh  pipeline_tests.sh  regex_tests.sh  streaming_tests.sh
