[package]
name = "sedx"
version = "0.2.6-alpha"
edition = "2024"
description = "A safe, modern replacement for GNU sed with automatic backups, preview mode, and rollback"
authors = ["InkyQuill <inkyquill@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/InkyQuill/sedx"
homepage = "https://github.com/InkyQuill/sedx"
documentation = "https://github.com/InkyQuill/sedx/blob/main/README.md"
readme = "README.md"
keywords = ["sed", "stream", "text-processing", "cli", "replacement"]
categories = ["command-line-utilities", "text-processing", "development-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "man/sedx.1",
    "completions/**/*",
]
rust-version = "1.85"

[[bin]]
name = "sedx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
similar = "2.6"
uuid = { version = "1.11", features = ["v4"] }
dirs = "5.0"
atty = "0.2"
which = "7.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1.5"
